k8/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels: { service: backend }
spec:
  selector: { service: backend }
  ports: [{ port: 80, targetPort: 80 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels: { service: backend }
spec:
  replicas: 1
  selector: { matchLabels: { service: backend } }
  template:
    metadata: { labels: { service: backend } }
    spec:
      # imagePullSecrets: [{ name: dockerconfigjson-github-com }] # If the image was private on ghcr.io (consult 1myears/totus or 1myears/extensa-deploy)
      restartPolicy: Always
      containers:
        - name: backend
          image: ghcr.io/jblew/prioratus-backend:1.2.0
          ports: [{ containerPort: 80 }]
