k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
    # Ingress class must be "public" instead of "nginx" because microk8s ingress is created with argument --ingress-class=public
    # Explanation: https://stackoverflow.com/questions/54506269/simple-ingress-from-host-with-microk8s
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: prioratus-ingress
spec:
  rules:
    - host: przeor.jblewandowski.com
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: prioratus.jblewandowski.com
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
    - hosts:
        - przeor.jblewandowski.com
        - prioratus.jblewandowski.com
      secretName: prioratus-tls5
